--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       dockerfile: docker/auth.Dockerfile
     ports:
       - "8000:8000"
+    env_file:
+      - .env
     depends_on:
       db:
         condition: service_healthy
@@ -29,6 +31,8 @@ services:
       dockerfile: docker/driver_location.Dockerfile
     ports:
       - "8002:8002"
+    env_file:
+      - .env
     depends_on:
       redis:
         condition: service_healthy
@@ -47,9 +51,8 @@ services:
 
   db:
     image: postgres:15
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+    env_file:
+      - .env
     ports:
       - "5432:5432"
     volumes:
