--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
       dockerfile: docker/ride_match.Dockerfile
     ports:
       - "8001:8001"
+    env_file:
+      - .env
     depends_on:
       kafka:
         condition: service_healthy
@@ -43,6 +45,8 @@ services:
       dockerfile: docker/trip.Dockerfile
     ports:
       - "8003:8003"
+    env_file:
+      - .env
     depends_on:
       db:
         condition: service_healthy
@@ -65,6 +69,8 @@ services:
 
   redis:
     image: redis:alpine
+    env_file:
+      - .env
     ports:
       - "6379:6379"
     healthcheck:
@@ -75,6 +81,8 @@ services:
 
   kafka:
     image: bitnami/kafka:latest
+    env_file:
+      - .env
     ports:
       - "9092:9092"
     environment:
