--- a/services/trip/requirements.txt
+++ b/services/trip/requirements.txt
@@ -2,4 +2,8 @@ fastapi
 uvicorn
 sqlalchemy
 psycopg2-binary
-pydantic
+pydantic<2
+python-jose[cryptography] 
+passlib[bcrypt]
+aiokafka
+python-dotenv
